fix alignment to center - burger menu and nav logo

--- a/public/custom.css
+++ b/public/custom.css
@@ -23,7 +23,7 @@ body {
 }
 
 .nav-top {
-    padding: 15px 0;
+    padding: 25px 0;
     background: #FCFCFC;
 }
 
@@ -51,6 +51,10 @@ body {
     right: 0;
     bottom: -5px;
     transition: 0.2s ease-in-out;
+}
+
+.burger-menu {
+    height: 25px;
 }
 
 .line {
